<resources>
    <string name="app_name">Mobile_Lab</string>
    <string name="app_name_human">WordsFactory</string>

    <string name="title_intro_one">Learn anytime and anywhere</string>
    <string name="title_intro_two">Find a course for you</string>
    <string name="title_intro_three">Improve your skills</string>
    <string name="description">Quarantine is the perfect time to spend your day learning something new, from anywhere!</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Sign_up">Sign up</string>
    <string name="Log_in">Log in</string>
    <string name="Skip">Skip</string>
    <string name="Create">Create your account</string>
    <string name="title_activity_main_app">MainAppActivity</string>
    <string name="meaning">Meanings:</string>
    <string name="dictionary">Dictionary</string>
    <string name="training">Training</string>
    <string name="video">Video</string>
    <string name="part_of_speech">Part of speech:</string>
    <string name="word_explanation">The practice or skill of preparing food by combining, mixing, and heating ingredients.

Example: he developed an interest in cooking. </string>

    <string name="add_word">Add to Dictionary</string>
    <string name="type_hint">Type a word</string>
    <string name="first_launch_word">Your word</string>

</resources>