<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dictionary.DictionaryFragment">


    <EditText
        android:id="@+id/wordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"


        android:background="@drawable/word_description"

        android:fontFamily="@font/rubik"
        android:hint="@string/type_hint"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingTop="17.5dp"
        android:paddingBottom="17.5dp"
        android:textColor="@color/skip_button"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/addButton"
        style="@style/RedButton"

        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_word"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meanRecyclerView" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="false"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/search"
        app:layout_constraintBottom_toBottomOf="@+id/wordEditText"
        app:layout_constraintEnd_toEndOf="@+id/wordEditText"
        app:layout_constraintTop_toTopOf="@+id/wordEditText" />

    <TextView
        android:id="@+id/userWordtextView"
        style="@style/BigTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/first_launch_word"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordEditText" />

    <TextView
        android:id="@+id/transcriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/start_gradient"
        app:layout_constraintBottom_toBottomOf="@+id/userWordtextView"
        app:layout_constraintStart_toEndOf="@+id/userWordtextView" />

    <ImageButton
        android:id="@+id/soundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="false"
        android:layout_centerVertical="true"

        android:layout_marginStart="16dp"
        android:layout_marginBottom="-10dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/sound"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/userWordtextView"
        app:layout_constraintStart_toEndOf="@+id/transcriptionTextView" />

    <TextView
        android:id="@+id/descPartSpTextView"
        style="@style/MediumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/part_of_speech"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userWordtextView" />

    <TextView
        android:id="@+id/partSpTextView"
        style="@style/SmallTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/descPartSpTextView"
        app:layout_constraintStart_toEndOf="@+id/descPartSpTextView" />

    <TextView
        android:id="@+id/meaningTextView"
        style="@style/MediumTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/meaning"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descPartSpTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/meanRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meaningTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>